...
    <string name="favorite_selected">Favorite selected</string>
    <string name="select_all">Select all</string>
    <string name="favorite_icon">Favorite Icon</string>
    <!-- Sort Trips -->
    <string name="sort">Button to sort Trips</string>
    <string name="start_date_asc">Start Date ⬆</string>
    <string name="start_date_desc">Start Date ⬇</string>
    <string name="end_date_asc">End Date ⬆</string>
    <string name="end_date_desc">End Date ⬇</string>
    <string name="name_asc">Name A–Z</string>
    <string name="name_desc">Name Z-A</string>
    <string name="favorites_first">Favorites</string>
    <!-- My Trips -->
    <string name="my_trips">My Trips</string>
    <string name="go_past_trips">Go to Past Trips</string>
    <string name="current_trip">Current Trip</string>
    <string name="no_current_trip">You have no current trip. Get planning!</string>
    <string name="upcoming_trips">Upcoming Trips</string>
...
    <string name="my_trips_tab">My trips</string>
    <string name="current_trip_tab">Current Trip</string>
    <string name="profile_tab">Profile</string>

    <!-- Profile -->
    <string name="my_profile">My Profile</string>
    <string name="profile_pic_desc">Profile picture</string>
    <string name="achievements">Achievements</string>
    <string name="pinned_trips">Pinned Trips</string>
    <string name="edit_pinned_trips">Edit Pinned Trips</string>
    <string name="pinned_pictures">Pinned Pictures</string>
    <string name="edit_pinned_pictures">Edit Pinned Pictures</string>
    <string name="edit_no_pinned_pictures">You don\'t have any pinned pictures. Press the edit button to pin some!</string>
...
